# ProConDisconnector

./: .gitignore  CMakeLists.txt  ProConDisconnector.pro  README.md  android_deployment_settings.json
cmake/: FindLibusb-1.0.cmake
src/: CMakeLists.txt  android_device.cpp  android_device.hpp  callbacks.hpp  command.hpp  main.cpp  main.qml  switch_controller.hpp  switch_controller_model.cpp  switch_controller_model.hpp  usb.cpp  usb.hpp  usb_manager.cpp  usb_manager.hpp  utility.hpp
src/android/: AndroidManifest.xml
src/android/res/xml/: device_filter.xml
src/android/src/com/usb/: ProConDisconnectActivity.java  SwitchController.java
